packages/cli/src/tui/snapshots/envio__tui__testing__syncing_chain.snap
---
source: packages/cli/src/tui/testing.rs
expression: "emulator.screen_text().join(\"\\n\")"
---
█▛▀▀ █▙  █ ▜▌ ▗█ █▌▗▟▀▀▙▖
█▛▀▘ █▛█▄█ ▝█▖█▘ █▌█▌  ▐█
█▙▄▄ █▌ ▜█  ▐█▛  █▌▝▜▄▄▛▘

Chain: 1 ⚡        25%
Blocks: 1,250,000 / 2,000,000  Events: 173,456

Total Events: 173,456 (5,000 events/sec)
Sync Time ETA: 5 minutes (⠸ in progress)

GraphQL: http://localhost:8080 (password: testing)
